<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/blue_bg">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/login"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:src="@drawable/logo"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="150dp"/>
        </FrameLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="36.7dp"
            android:background="@drawable/blue_border_rounded_cornwe">
            <EditText
                android:id="@+id/etEmail_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/icon1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:layout_marginRight="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp"
                />
            <ImageView
                android:id="@+id/icon1"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/ic_email"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="12.7dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/blue_border_rounded_cornwe">
            <EditText
                android:id="@+id/etPassword_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/icon"
                android:layout_marginRight="20dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/mot_de_pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp"
                />
            <ImageView
                android:id="@+id/icon"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/ic_key"/>
        </RelativeLayout>
        <FrameLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

           <CheckBox
               android:id="@+id/cheking_user"
               android:layout_width="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/se_souviez_de_moi"
               android:layout_height="wrap_content"/>
        </FrameLayout>
        <FrameLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/btn_login"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                android:background="@drawable/blue_fill__rounded_color"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="12sp"
                />
        </FrameLayout>
        <FrameLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_marginTop="2dp"
                android:layout_width="30dp"
                android:layout_gravity="center"
                android:layout_height="30dp"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_regisre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/cr_er_un_compte_d_utulisatur"
                android:textColor="#D75A4A"
                android:textSize="12.5dp"
                />
        </FrameLayout>
        <FrameLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:textColor="#aeaeae"
                android:layout_gravity="center_horizontal"
                android:text="OR"
                android:textSize="15.3sp"
                />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_fb"
                android:layout_width="26.7dp"
                android:layout_height="26.7dp"
                android:src="@drawable/fb"/>
            <ImageView
                android:id="@+id/img_lk"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="26.7dp"
                android:layout_height="26.7dp"
                android:src="@drawable/linkedin"/>
            <ImageView
                android:id="@+id/img_tw"
                android:layout_marginRight="20dp"
                android:layout_width="26.7dp"
                android:layout_height="26.7dp"
                android:src="@drawable/twitter"/>
            <ImageView
                android:id="@+id/img_gl"
                android:layout_width="26.7dp"
                android:layout_height="26.7dp"
                android:src="@drawable/google"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>